# UsefulGnom

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  basecnt_cov_dep.py  environment.yml  freq_mat_mut_stats.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  test-snake.yml  test.yml
api/: index.html
config/: README.md  amplicon_cov.smk  amplicon_cov.yaml  base_coverage.yaml  config.yaml  smk_testing_config.yaml
contributing/: index.html
resources/amplicon_cov/: ArticV531primers.bed
scripts/: amplicon_covs.py  amplicon_covs_click.py  basecnt_cov_dep.py  freq_mat_mut_stats.py  total_cov_dep.py
search/: search_index.json
src/usefulgnom/analyze/: __init__.py  basecnt_coverage.py  total_coverage.py
src/usefulgnom/interface/: __init__.py
src/usefulgnom/serialize/: __init__.py  basecnt_coverage.py  coverage.py  total_coverage.py
src/usefulgnom/visualise/: __init__.py
tests/analyze/: test_basecnt_coverage.py
tutorial/: index.html
usefulgnom/: __init__.py
usefulgnom/analyze/: __init__.py  basecnt_coverage.py  coverage.py
usefulgnom/serialize/: __init__.py
workflow/: README.md  Snakefile
workflow/.snakemake/metadata/: Li4vZGF0YS9zdGF0aXN0aWNzLmNzdg==
workflow/.tests/unit/: common.py  test_amplicon_cov.py  test_make_price_data.py  test_smk_testing.py
workflow/.tests/unit/amplicon_cov/: amplicon_cov.yaml
workflow/.tests/unit/make_price_data/expected/: statistics.csv
workflow/.tests/unit/smk_testing/expected/: statistics.csv
workflow/Snakemake/: common.py
workflow/rules/: amplicon_cov.smk  base_coverage.smk  smk_testing.smk
workflows/: README.md  Snakefile  amplicon_cov.smk  base_coverage.smk  base_coverage_depth.smk  index.html  smk_testing.smk
workflows/.tests/unit/: test_make_price_data.py
workflows/Snakemake/: common.py
(+3 files in other folders)
