[tool.poetry]
name = "usefulnom"
version = "0.1.0"
description = ""
authors = ["Gordon Julian Koehn <gordon.koehn@dbsse.ethz.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
